--- a/css/learning_res.css
+++ b/css/learning_res.css
@@ -177,10 +177,9 @@ p {
 }
 
 nav {
-  border: 1px solid red;
   height: 100px;
   width: 100%;
-  background-color: white;
+  background-color: transparent;
 }
 
 nav h2 {
@@ -217,12 +216,11 @@ button:focus {
 header {
   display: flex;
   padding: 80px;
-  min-height: 100vh;
+  min-height: 80vh;
 }
 
 .header-left,
 .header-right {
-  border: 1px solid blue;
   width: 50%;
 }
 
@@ -260,10 +258,10 @@ header {
 .header-right {
   display: flex;
   justify-content: flex-end;
+  min-height: 720px;
 }
 
 .hero-container {
-  border: 1px solid red;
   width: 100%;
   height: 100%;
   border-radius: 27px 27px 27px 170px;
@@ -278,7 +276,6 @@ header {
 
 /* Section Divider */
 .divider {
-  border: 1px solid black;
   width: 100%;
   height: 122px;
   background-color: #ec8719;
@@ -286,14 +283,13 @@ header {
 
 /* Course Overview Section */
 .course-overview-section {
-  border: 1px solid red;
   padding: 80px;
   display: flex;
 }
 
 .course-overview-left {
   width: 40%;
-  border: 1px red solid;
+
   display: flex;
   flex-direction: column;
   gap: 1.875rem;
@@ -315,8 +311,6 @@ header {
 }
 
 .course-overview-right {
-  min-width: 790px;
-  border: 1px black solid;
   display: flex;
   gap: 20px;
   justify-content: flex-end;
@@ -345,7 +339,6 @@ header {
 }
 
 .course-overview-card {
-  border: 1px solid red;
   height: 308px;
   border-radius: 27px;
   background-color: white;
@@ -373,6 +366,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  min-width: 258px;
 }
 
 .course-overview-card ul li {
@@ -382,8 +376,6 @@ header {
 
 /* Course Feature Section */
 .course-feature-section {
-  min-height: 50vh;
-  border: 1px solid black;
 }
 
 .course-feature-section h2 {
@@ -396,7 +388,7 @@ header {
 
 .features {
   display: flex;
-  border: 1px blue solid;
+
   justify-content: space-around;
   margin-top: 0;
   margin-bottom: 32px;
@@ -429,7 +421,6 @@ header {
 
 /* Course Highlights */
 #course-highlights {
-  border: 1px solid blue;
   padding: 80px;
   display: flex;
   flex-direction: column;
@@ -474,11 +465,9 @@ header {
   background-color: black;
   opacity: 0.5;
   padding: 5rem;
-  border: 10px solid blue;
 }
 
 .course-highlights-text-content {
-  border: 1px solid red;
   position: absolute;
   top: 0;
   z-index: 2;
@@ -521,7 +510,7 @@ header {
 .cta-left,
 .cta-right {
   width: 50%;
-  border: 1px solid black;
+
   height: 100%;
 }
 
@@ -539,8 +528,8 @@ header {
   border-radius: 27px 170px 27px 27px;
   width: 100%;
   height: 100%;
-  border: 1px blue solid;
-  background-color: var(--contrast-color);
+
+  background-color: var(--accent-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -621,30 +610,51 @@ footer {
 /* Tablet Screens */
 @media (width < 1440px) {
   header {
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
+    padding-block: 2rem;
+  }
+  .header-left {
+    position: absolute;
+    color: white;
+    padding: 5rem;
+    z-index: 9999;
+    top: 22%;
+    min-width: 566px;
   }
 
   .header-right {
     width: 100%;
-    margin-bottom: 5rem;
   }
 
-  /* Header - Blender Logo */
-  body > main > header > div.header-left > img {
-    position: static;
+  .hero-container {
+    position: relative;
   }
 
-  .header-left {
-    text-align: center;
+  .header-overlay {
     width: 100%;
-    align-items: center;
+    position: absolute;
+    top: 0;
+    background-color: black;
+    height: 100%;
+    opacity: 0.5;
+  }
+
+  body > main > header > div.header-right > div {
+    border-radius: 27px;
   }
 
   /* Text below h1 */
   body > main > header > div.header-left > h3 {
     width: 34rem;
+  }
+
+  body > main > header > div.header-left > div > button:nth-child(2) {
+    color: white;
+    opacity: 0.7;
+  }
+
+  body > main > header > div.header-left > div > button:nth-child(2):hover {
+    opacity: 1;
+    transition: 0.3s ease-in-out;
   }
 
   .course-overview-section {
@@ -673,10 +683,6 @@ footer {
     align-self: center;
   }
 
-  #cta {
-    height: 120vh;
-  }
-
   #cta > div {
     flex-direction: column;
     justify-content: center;
@@ -684,14 +690,34 @@ footer {
     text-align: center;
   }
 
+  #cta {
+    height: auto;
+    background-color: var(--accent-color);
+  }
+
   .cta-left,
   .cta-right {
     width: 100%;
   }
 
+  .cta-left {
+    height: 5rem;
+    margin-bottom: 2rem;
+  }
+
   .cta-right {
     margin-left: 0;
     gap: 1.875rem;
+    height: auto;
+  }
+
+  .cta-img-container {
+    background-color: transparent;
+  }
+
+  #cta > div > div.cta-right > button {
+    background-color: var(--contrast-color);
+    color: white;
   }
 
   #cta > div > div.cta-right > div,
@@ -703,15 +729,37 @@ footer {
     width: 60%;
     align-self: center;
   }
+
+  #IABE-certified {
+    flex-direction: column-reverse;
+    gap: 2rem;
+    align-items: flex-start;
+  }
 }
 
 /* Mobile Screens */
-@media (width <= 768px) {
+@media (width <= 955px) {
   header,
   .course-overview-section {
     padding: 23px;
-    padding-block: 5rem;
+    padding-block: 0;
     gap: 0rem;
+    padding-top: 5rem;
+  }
+
+  header {
+    padding: 0;
+    padding-block: 5rem;
+    padding-top: 0;
+    justify-content: center;
+  }
+
+  .header-left {
+    top: 15%;
+  }
+
+  body > main > header > div.header-right > div {
+    border-radius: 0 0 0 0;
   }
 
   .course-overview-left {
@@ -721,6 +769,7 @@ footer {
   .course-overview-right {
     padding: 3.5rem;
     min-width: none;
+    align-items: center;
   }
 
   .course-overview-card-top-row,
@@ -751,7 +800,7 @@ footer {
   .features {
     flex-direction: column;
     text-align: center;
-    width: 40%;
+    min-width: 238.39px;
     margin: 0 auto;
     gap: 5.625rem;
   }
@@ -787,5 +836,9 @@ footer {
 
   #IABE-certified > img {
     width: 12.8rem;
+  }
+
+  .orange-line {
+    width: 17rem;
   }
 }
