--- a/css/learning_res.css
+++ b/css/learning_res.css
@@ -147,6 +147,16 @@ table {
   box-sizing: border-box;
 }
 
+.scroller {
+  height: 300px;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+.scroller section {
+  scroll-snap-align: start;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-image: url(../assets/images/bg.png);
